--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,6 +38,7 @@
                 style="@style/MyEditTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="E-mail"
                 android:inputType="text" />
 
             <EditText
@@ -45,6 +46,7 @@
                 style="@style/MyEditTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="Password"
                 android:inputType="textPassword" />
 
             <LinearLayout
