--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -19,4 +19,15 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">16dp</item>
     </style>
+
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/button</item>
+        <item name="colorPrimary">@color/white</item>
+    </style>
+
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:weekNumberColor">@color/background</item>
+        <item name="android:headerYearTextAppearance">@color/white</item>
+    </style>
 </resources>
