--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,10 +24,10 @@
 
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginBottom="20sp"
-                android:src="@drawable/icon_be_active"
+                android:src="@drawable/logo_white"
                 android:text="@string/logo_Text"
                 android:textSize="35sp" />
 
@@ -43,15 +43,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="E-mail"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:background="@drawable/rounded_edit_text"/>
 
                 <EditText
                     android:id="@+id/password_input"
                     style="@style/MyEditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:hint="Password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:background="@drawable/rounded_edit_text"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -62,6 +65,7 @@
                     <Button
                         android:id="@+id/login_button"
                         style="@style/MyButtonStyle"
+                        android:background="@drawable/rounded_button"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="70sp"
