--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="36dp"
     android:background="@color/background"
-    tools:context="LoginFragment">
+    tools:context=".RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,15 +20,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="20sp"
-                android:src="@drawable/logo_white"
-                android:text="@string/logo_Text"
-                android:textSize="35sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,6 +46,16 @@
                     android:inputType="textPassword"
                     android:background="@drawable/rounded_edit_text"/>
 
+                <EditText
+                    android:id="@+id/password_input_Opakovane"
+                    style="@style/MyEditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="@string/editTextPasswordOpakovane"
+                    android:inputType="textPassword"
+                    android:background="@drawable/rounded_edit_text"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
                     android:orientation="vertical">
 
                     <Button
-                        android:id="@+id/login_button"
+                        android:id="@+id/register_button"
                         style="@style/MyButtonStyle"
                         android:background="@drawable/rounded_button"
                         android:layout_width="match_parent"
@@ -71,19 +71,10 @@
                         android:layout_marginLeft="70sp"
                         android:layout_marginTop="20sp"
                         android:layout_marginRight="70sp"
-                        android:text="@string/loginButton" />
+                        android:text="@string/registerButton" />
                 </LinearLayout>
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/register_link"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="@string/textViewRegistrovanie" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
