#9 Pridanie fragmentu na meranie novej activity
Pridanie meranie casu na novu aktivitu
//TODD : Dorobit kroky, otocenie obrazovky, ratanie casu na pozadi

--- a/app/src/main/res/layout/fragment_main_application.xml
+++ b/app/src/main/res/layout/fragment_main_application.xml
@@ -51,7 +51,7 @@
             </ScrollView>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab"
+                android:id="@+id/button_add_activity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
