--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,9 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginBottom="20sp"
-                android:src="@drawable/logo_white"
-                android:text="@string/logo_Text"
-                android:textSize="35sp" />
+                android:src="@drawable/logo_white" />
 
             <LinearLayout
                 android:layout_width="match_parent"
