--- a/app/src/main/res/layout-land/fragment_activity_counter.xml
+++ b/app/src/main/res/layout-land/fragment_activity_counter.xml
@@ -43,16 +43,15 @@
                     android:progressTint="@color/button" />
             </FrameLayout>
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_horizontal">
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -105,7 +104,7 @@
                     </LinearLayout>
                 </LinearLayout>
 
-            </LinearLayout>
+            </FrameLayout>
 
         </LinearLayout>
 
