--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,7 +36,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/username_input"
+                    android:id="@+id/mail_input"
                     style="@style/MyEditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
