#13 Pridanie bocneho menu
Pridanie bocneho menu s vlastnym stylom podla youtube:
https://www.youtube.com/watch?v=ZodMjakYj3A

//TODO: Implementovat listenery pre tlacidla v menu

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#333c52</color>
-    <color name="button">#849cd9</color>
+    <color name="background">#1A374D</color>
+    <color name="button">#6998AB</color>
+    <color name="appbar">#B1D0E0</color>
 </resources>
