--- a/app/src/main/res/layout/fragment_activity_counter.xml
+++ b/app/src/main/res/layout/fragment_activity_counter.xml
@@ -40,7 +40,7 @@
                     android:layout_width="350dp"
                     android:layout_height="350dp"
                     android:layout_gravity="center"
-                    android:progressTint="@color/button"/>
+                    android:progressTint="@color/background"/>
             </FrameLayout>
 
             <LinearLayout
