--- a/app/src/main/res/layout/fragment_main_application.xml
+++ b/app/src/main/res/layout/fragment_main_application.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     tools:context=".MainApplication">
 
     <androidx.constraintlayout.widget.ConstraintLayout
