#17 Pridanie carty do recycle view

--- a/app/src/main/res/layout/fragment_main_application.xml
+++ b/app/src/main/res/layout/fragment_main_application.xml
@@ -43,7 +43,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/activityZoznam"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/activity_item"/>
             </LinearLayout>
 
         </LinearLayout>
