--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     android:padding="10dp">
 
-    <solid android:color="#849cd9" />
+    <solid android:color="#6998AB" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
