--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -22,11 +22,11 @@
         android:label="fragment_main_application"
         tools:layout="@layout/fragment_main_application" >
         <action
-            android:id="@+id/action_mainApplication_to_activityCounter"
-            app:destination="@id/activityCounter" />
-        <action
             android:id="@+id/action_mainApplication_to_loginFragment2"
             app:destination="@id/loginFragment2" />
+        <action
+            android:id="@+id/action_mainApplication_to_timePickerDialog2"
+            app:destination="@id/timePickerDialog2" />
     </fragment>
     <fragment
         android:id="@+id/activityCounter"
@@ -42,4 +42,12 @@
             android:id="@+id/action_registerFragment_to_mainApplication"
             app:destination="@id/mainApplication" />
     </fragment>
+    <dialog
+        android:id="@+id/timePickerDialog2"
+        android:name="com.romanlojko.beactive.dialogs.TimePickerDialog"
+        android:label="TimePickerDialog" >
+        <action
+            android:id="@+id/action_timePickerDialog2_to_activityCounter"
+            app:destination="@id/activityCounter" />
+    </dialog>
 </navigation>
