#22 Upravenie otacania aplikacie a Ohlasenie
Funkcne odhlasenie z aplikacie a pridanie menu do otocenej aplikacie

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/text_view_meno_preizvisko"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Roman Lojko"
+                android:text=""
                 android:paddingTop="16dp"
                 android:paddingBottom="16dp"
                 android:gravity="center"/>
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:text="80"/>
+                    android:text=""/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -70,7 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:text="80" />
+                    android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/progile_pohlavie_text" />
