--- a/app/src/main/res/layout-land/fragment_activity_counter.xml
+++ b/app/src/main/res/layout-land/fragment_activity_counter.xml
@@ -31,7 +31,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="64dp"
-                    android:text="00:00"
+                    android:text=""
                     android:textSize="70sp" />
 
                 <me.zhanghai.android.materialprogressbar.MaterialProgressBar
@@ -102,7 +102,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginTop="10dp"
-                            android:text="0000"
+                            android:text=""
                             android:textSize="54sp" />
 
                         <ImageView
