--- a/app/src/main/res/layout-land/fragment_main_application.xml
+++ b/app/src/main/res/layout-land/fragment_main_application.xml
@@ -17,7 +17,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_baseline_person_outline_24"
             app:backgroundTint="@color/button"
@@ -31,7 +30,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_baseline_add_24"
             app:backgroundTint="@color/button"
@@ -45,7 +43,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginEnd="8dp"
             android:src="@drawable/ic_baseline_menu_24"
             app:backgroundTint="#406882"
             app:layout_anchorGravity="bottom|right|end"
@@ -84,10 +81,12 @@
 
             </FrameLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/activityZoznam"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/activityZoznam"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="80dp"
+                tools:listitem="@layout/activity_item" />
 
         </LinearLayout>
 
