--- a/app/src/main/res/layout/fragment_main_application.xml
+++ b/app/src/main/res/layout/fragment_main_application.xml
@@ -19,40 +19,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_baseline_person_outline_24"
+            android:visibility="invisible"
             app:backgroundTint="@color/button"
             app:layout_anchorGravity="bottom|right|end"
             app:layout_constraintBottom_toTopOf="@+id/button_add_activity"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_add_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_baseline_add_24"
+            android:visibility="invisible"
             app:backgroundTint="@color/button"
             app:layout_anchorGravity="bottom|right|end"
             app:layout_constraintBottom_toTopOf="@+id/button_Menu"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_Menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:src="@drawable/ic_baseline_menu_24"
             app:backgroundTint="#406882"
             app:layout_anchorGravity="bottom|right|end"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="MissingConstraints" />
 
@@ -87,6 +83,7 @@
                     android:id="@+id/activityZoznam"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="80dp"
                     tools:listitem="@layout/activity_item" />
 
             </LinearLayout>
