--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -39,10 +39,30 @@
                 android:orientation="vertical">
 
                 <EditText
+                    android:id="@+id/name_input"
+                    style="@style/MyEditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_edit_text"
+                    android:hint="@string/editTextName"
+                    android:inputType="text" />
+
+                <EditText
+                    android:id="@+id/surname_input"
+                    style="@style/MyEditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rounded_edit_text"
+                    android:hint="@string/editTextSurname"
+                    android:inputType="text" />
+
+                <EditText
                     android:id="@+id/mail_input"
                     style="@style/MyEditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:hint="@string/editTextEmail"
                     android:inputType="text"
                     android:background="@drawable/rounded_edit_text"/>
