--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -15,79 +15,133 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/register_link"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:layout_marginBottom="20sp"
-                android:textColor="@color/white"
-                android:textSize="40sp"
-                android:text="@string/textViewVytvoritUcet" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="32dp"
+                android:gravity="center">
 
-            <LinearLayout
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                <TextView
+                    android:id="@+id/register_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/textViewVytvoritUcet"
+                    android:textColor="@color/white"
+                    android:textSize="40sp"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/register_link">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <EditText
+                            android:id="@+id/reg_name_input"
+                            style="@style/MyEditTextStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/rounded_edit_text"
+                            android:hint="@string/editTextName"
+                            android:inputType="text" />
+
+                        <EditText
+                            android:id="@+id/reg_surname_input"
+                            style="@style/MyEditTextStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/rounded_edit_text"
+                            android:hint="@string/editTextSurname"
+                            android:inputType="text" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/register_button"
+                                style="@style/MyButtonStyle"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="70sp"
+                                android:layout_marginTop="20sp"
+                                android:layout_marginRight="70sp"
+                                android:padding="12dp"
+                                android:background="@drawable/rounded_button"
+                                android:text="@string/registerButton" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/username_input"
-                    style="@style/MyEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/editTextEmail"
-                    android:inputType="text"
-                    android:background="@drawable/rounded_edit_text"/>
-
-                <EditText
-                    android:id="@+id/password_input"
-                    style="@style/MyEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:hint="@string/editTextPassword"
-                    android:inputType="textPassword"
-                    android:background="@drawable/rounded_edit_text"/>
-
-                <EditText
-                    android:id="@+id/password_input_Opakovane"
-                    style="@style/MyEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:hint="@string/editTextPasswordOpakovane"
-                    android:inputType="textPassword"
-                    android:background="@drawable/rounded_edit_text"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:padding="32dp"
+                    android:gravity="center"
                     android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/register_button"
-                        style="@style/MyButtonStyle"
-                        android:background="@drawable/rounded_button"
+                    <EditText
+                        android:id="@+id/reg_mail_input"
+                        style="@style/MyEditTextStyle"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="70sp"
-                        android:layout_marginTop="20sp"
-                        android:layout_marginRight="70sp"
-                        android:text="@string/registerButton" />
-                </LinearLayout>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/rounded_edit_text"
+                        android:hint="@string/editTextEmail"
+                        android:inputType="text" />
 
-            </LinearLayout>
+                    <EditText
+                        android:id="@+id/reg_password_input"
+                        style="@style/MyEditTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/rounded_edit_text"
+                        android:hint="@string/editTextPassword"
+                        android:inputType="textPassword" />
+
+                    <EditText
+                        android:id="@+id/reg_password_input_check"
+                        style="@style/MyEditTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/rounded_edit_text"
+                        android:hint="@string/editTextPasswordOpakovane"
+                        android:inputType="textPassword" />
+
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
