Finalne upravy a aktualizacia Kdocu
Pridanie lepsieho pocitania kalorii zo stranky https://www.quora.com/What-is-the-formula-to-calculate-calories-burnt-by-running
Uprava orientation change
Kdoc novy

--- a/app/src/main/res/layout-land/fragment_activity_counter.xml
+++ b/app/src/main/res/layout-land/fragment_activity_counter.xml
@@ -32,7 +32,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="64dp"
                     android:text=""
-                    android:textSize="70sp" />
+                    android:textSize="60sp" />
 
                 <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                     android:id="@+id/progress_casovac"
@@ -69,15 +69,15 @@
                             android:src="@android:drawable/ic_media_play"
                             app:backgroundTint="@color/button" />
 
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            android:id="@+id/flaotActionButton_pause"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
-                            android:layout_margin="16dp"
-                            android:clickable="true"
-                            android:src="@android:drawable/ic_media_pause"
-                            app:backgroundTint="@color/button" />
+<!--                        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--                            android:id="@+id/flaotActionButton_pause"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_gravity="bottom"-->
+<!--                            android:layout_margin="16dp"-->
+<!--                            android:clickable="true"-->
+<!--                            android:src="@android:drawable/ic_media_pause"-->
+<!--                            app:backgroundTint="@color/button" />-->
 
                         <com.google.android.material.floatingactionbutton.FloatingActionButton
                             android:id="@+id/flaotActionButton_close"
